# FeedMee

./: .editorconfig  .gitignore  .lintstagedrc.json  .prettierignore  Architecture.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
.agents/: AGENTS.md
.docs/: Architecture.md  BuildIt.md  Preflight.md  ToDo.md
.husky/: pre-commit
.scripts/: buildit.ps1
scripts/: package.js  version.js
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  settings.rs
src/lib/: articleActions.svelte.ts  dndState.svelte.ts  feedActions.svelte.ts  feedRefresh.svelte.ts  keyboardNav.svelte.ts  store.svelte.ts  store.ts  storeTypes.ts  types.ts
src/lib/actions/: tooltip.svelte.ts
src/lib/components/: AboutModal.svelte  ArticleListPane.svelte  NavPane.svelte  ReadingPane.svelte  SettingsModal.svelte  ShortcutsModal.svelte  TitleBar.svelte  Tooltip.svelte
src/lib/components/nav/: FolderGroup.svelte  NavToolbar.svelte  SpecialFeeds.svelte
src/lib/utils/: shortcuts.ts
src/routes/: +layout.svelte  +page.svelte
