[package]
name = "FeedMee"
version = "0.2.2"
description = "The seriously fast feed reader."
edition = "2024"
authors = ["dcog989"]

[lib]
name = "feedmee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
chrono = "0.4"
feed-rs = "2.3.1"
generic-array = "0.14.9"
log = "0.4.28"
opml = "1.1.6"
readability-rust = "0.1.0"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = "2.4.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-opener = "2.5.3"
tauri-plugin-window-state = "2.4.1"
toml = "0.8.23"
url = "2.5.8"
